--- a/demo_project/test-output/old/Default suite/methods-not-run.html
+++ b/demo_project/test-output/old/Default suite/methods-not-run.html
@@ -1,3 +1,5 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>test_script.AdminUsers_test.delete_AdminUserDetails</td></tr>
+<tr><td>test_script.Login_test.verifyInvalidpasswordEntry</td></tr>
+<tr><td>test_script.Login_test.verifyInvalidUsernameAndPassword</td></tr>
+<tr><td>test_script.Login_test.verifyInvalidUserEntry</td></tr>
 </table>
