--- a/demo_project/test-output/old/multibrowsertesting/classes.html
+++ b/demo_project/test-output/old/multibrowsertesting/classes.html
@@ -34,14 +34,26 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>test_script.ManageNews_test</td>
+<td>test_script.Login_test</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>login</td>
+<td>verifyInvalidUserEntry</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyInvalidUsernameAndPassword</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyTheUserIsAbleToLoginUsingValidCredentials</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyInvalidpasswordEntry</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
