--- a/demo_project/test-output/old/Default suite/classes.html
+++ b/demo_project/test-output/old/Default suite/classes.html
@@ -4,18 +4,27 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>test_script.AdminUsers_test</td>
+<td>test_script.Login_test</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>input_AdminUserDetails</td>
+<td>verifyInvalidUserEntry</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>delete_AdminUserDetails</td>
+<td>verifyInvalidUsernameAndPassword</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyTheUserIsAbleToLoginUsingValidCredentials</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyInvalidpasswordEntry</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
