--- a/demo_project/test-output/old/Default suite/methods.html
+++ b/demo_project/test-output/old/Default suite/methods.html
@@ -1,22 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7c8faf">  <td>25/03/17 11:16:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializerbrowser()[pri:0, instance:test_script.AdminUsers_test@3349e9bb]">&gt;&gt;initializerbrowser</td> 
-<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="7c8faf">  <td>25/03/17 11:16:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializerbrowser()[pri:0, instance:test_script.AdminUsers_test@3349e9bb]">&gt;&gt;initializerbrowser</td> 
-<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="7c8faf">  <td>25/03/17 11:16:46</td>   <td>5154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.quitandclose()[pri:0, instance:test_script.AdminUsers_test@3349e9bb]">&lt;&lt;quitandclose</td> 
-<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="7c8faf">  <td>25/03/17 11:16:46</td>   <td>5154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.quitandclose()[pri:0, instance:test_script.AdminUsers_test@3349e9bb]">&lt;&lt;quitandclose</td> 
-<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/03/17 11:16:44</td>   <td>2727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminUsers_test.input_AdminUserDetails()[pri:1, instance:test_script.AdminUsers_test@3349e9bb]">input_AdminUserDetails</td> 
+<tr bgcolor="f888f6">  <td>25/03/19 10:57:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_test.verifyTheUserIsAbleToLoginUsingValidCredentials()[pri:1, instance:test_script.Login_test@35d019a3]">verifyTheUserIsAbleToLoginUsingValidCredentials</td> 
   <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/03/17 11:16:44</td>   <td>2727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminUsers_test.input_AdminUserDetails()[pri:1, instance:test_script.AdminUsers_test@3349e9bb]">input_AdminUserDetails</td> 
-  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="7c8faf">  <td>25/03/17 11:16:46</td>   <td>5154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.quitandclose()[pri:0, instance:test_script.AdminUsers_test@3349e9bb]">&lt;&lt;quitandclose</td> 
+<tr bgcolor="7c8faf">  <td>25/03/19 10:57:24</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.quitandclose()[pri:0, instance:test_script.Login_test@35d019a3]">&lt;&lt;quitandclose</td> 
 <td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="7c8faf">  <td>25/03/17 11:16:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializerbrowser()[pri:0, instance:test_script.AdminUsers_test@3349e9bb]">&gt;&gt;initializerbrowser</td> 
-<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/03/17 11:16:44</td>   <td>2727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminUsers_test.input_AdminUserDetails()[pri:1, instance:test_script.AdminUsers_test@3349e9bb]">input_AdminUserDetails</td> 
-  <td>main@1554547125</td>   <td></td> </tr>
 </table>
