--- a/demo_project/test-output/old/Suite/groups.html
+++ b/demo_project/test-output/old/Suite/groups.html
@@ -1,1 +1,3 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>Login_test.verifyTheUserIsAbleToLoginUsingValidCredentials()[pri:1, instance:test_script.Login_test@2b30a42c]<br/>ManageContacts_test.manageContact()[pri:0, instance:test_script.ManageContacts_test@6cb107fd]<br/></td></tr>
+</table>
