--- a/demo_project/test-output/old/Suite/methods.html
+++ b/demo_project/test-output/old/Suite/methods.html
@@ -1,16 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b66d96">  <td>25/03/18 10:34:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageContacts_test.manageContact()[pri:0, instance:test_script.ManageContacts_test@55b699ef]">manageContact</td> 
-  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c88a92">  <td>25/03/18 10:34:22</td>   <td>4934</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.quitandclose()[pri:0, instance:test_script.ManageContacts_test@55b699ef]">&lt;&lt;quitandclose</td> 
-<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c88a92">  <td>25/03/18 10:34:12</td>   <td>-5372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializerbrowser(java.lang.String)[pri:0, instance:test_script.ManageContacts_test@55b699ef]">&gt;&gt;initializerbrowser</td> 
-<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="b66d96">  <td>25/03/18 10:34:38</td>   <td>20932</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageContacts_test.manageContact()[pri:0, instance:test_script.ManageContacts_test@44c03695]">manageContact</td> 
-  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c88a92">  <td>25/03/18 10:34:42</td>   <td>24672</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.quitandclose()[pri:0, instance:test_script.ManageContacts_test@44c03695]">&lt;&lt;quitandclose</td> 
-<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c88a92">  <td>25/03/18 10:34:22</td>   <td>5010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializerbrowser(java.lang.String)[pri:0, instance:test_script.ManageContacts_test@44c03695]">&gt;&gt;initializerbrowser</td> 
-<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="7969a3">  <td>25/03/21 10:50:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_test.verifyTheUserIsAbleToLoginUsingValidCredentials()[pri:1, instance:test_script.Login_test@2b30a42c]">verifyTheUserIsAbleToLoginUsingValidCredentials</td> 
+  <td>main@418958713</td>   <td></td> </tr>
+<tr bgcolor="649a64">  <td>25/03/21 10:50:13</td>   <td>9534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializerbrowser(java.lang.String)[pri:0, instance:test_script.Login_test@2b30a42c]">&gt;&gt;initializerbrowser</td> 
+<td>&nbsp;</td>  <td>main@418958713</td>   <td></td> </tr>
+<tr bgcolor="649a64">  <td>25/03/21 10:50:18</td>   <td>14703</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:test_script.Login_test@2b30a42c]">&lt;&lt;browserQuit</td> 
+<td>&nbsp;</td>  <td>main@418958713</td>   <td></td> </tr>
+<tr bgcolor="649a64">  <td>25/03/21 10:50:18</td>   <td>14707</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializerbrowser(java.lang.String)[pri:0, instance:test_script.ManageContacts_test@6cb107fd]">&gt;&gt;initializerbrowser</td> 
+<td>&nbsp;</td>  <td>main@418958713</td>   <td></td> </tr>
+<tr bgcolor="607b64">  <td>25/03/21 10:50:22</td>   <td>18886</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageContacts_test.manageContact()[pri:0, instance:test_script.ManageContacts_test@6cb107fd]">manageContact</td> 
+  <td>main@418958713</td>   <td></td> </tr>
+<tr bgcolor="649a64">  <td>25/03/21 10:50:23</td>   <td>20110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:test_script.ManageContacts_test@6cb107fd]">&lt;&lt;browserQuit</td> 
+<td>&nbsp;</td>  <td>main@418958713</td>   <td></td> </tr>
+<tr bgcolor="649a64">  <td>25/03/21 10:50:13</td>   <td>9534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializerbrowser(java.lang.String)[pri:0, instance:test_script.Login_test@2b30a42c]">&gt;&gt;initializerbrowser</td> 
+<td>&nbsp;</td>  <td>main@418958713</td>   <td></td> </tr>
+<tr bgcolor="7969a3">  <td>25/03/21 10:50:12</td>   <td>9373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_test.verifyInvalidpasswordEntry()[pri:2, instance:test_script.Login_test@2b30a42c]">verifyInvalidpasswordEntry</td> 
+  <td>main@418958713</td>   <td></td> </tr>
+<tr bgcolor="649a64">  <td>25/03/21 10:50:18</td>   <td>14703</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:test_script.Login_test@2b30a42c]">&lt;&lt;browserQuit</td> 
+<td>&nbsp;</td>  <td>main@418958713</td>   <td></td> </tr>
+<tr bgcolor="649a64">  <td>25/03/21 10:50:13</td>   <td>9534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializerbrowser(java.lang.String)[pri:0, instance:test_script.Login_test@2b30a42c]">&gt;&gt;initializerbrowser</td> 
+<td>&nbsp;</td>  <td>main@418958713</td>   <td></td> </tr>
+<tr bgcolor="649a64">  <td>25/03/21 10:50:18</td>   <td>14703</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:test_script.Login_test@2b30a42c]">&lt;&lt;browserQuit</td> 
+<td>&nbsp;</td>  <td>main@418958713</td>   <td></td> </tr>
+<tr bgcolor="7969a3">  <td>25/03/21 10:50:18</td>   <td>14694</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_test.verifyInvalidUsernameAndPassword()[pri:4, instance:test_script.Login_test@2b30a42c]">verifyInvalidUsernameAndPassword</td> 
+  <td>main@418958713</td>   <td></td> </tr>
 </table>
