--- a/demo_project/test-output/old/multibrowsertesting/methods-alphabetical.html
+++ b/demo_project/test-output/old/multibrowsertesting/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>multibrowsertesting</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e56ce6">  <td>25/03/18 11:18:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializerbrowser(java.lang.String)[pri:0, instance:test_script.ManageContacts_test@49e53c76]">&gt;&gt;initializerbrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test1-1@1646430738</td>   <td></td> </tr>
-<tr bgcolor="e56ce6">  <td>25/03/18 11:18:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializerbrowser(java.lang.String)[pri:0, instance:test_script.ManageNews_test@1bb5a082]">&gt;&gt;initializerbrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test1-2@1434836182</td>   <td></td> </tr>
-<tr bgcolor="e6e07c">  <td>25/03/18 11:18:57</td>   <td>4040</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageNews_test.login()[pri:1, instance:test_script.ManageNews_test@1bb5a082]">login</td> 
-  <td>TestNG-test=Test1-2@1434836182</td>   <td></td> </tr>
-<tr bgcolor="c88a92">  <td>25/03/18 11:18:57</td>   <td>4351</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageContacts_test.manageContact()[pri:0, instance:test_script.ManageContacts_test@49e53c76]">manageContact</td> 
-  <td>TestNG-test=Test1-1@1646430738</td>   <td></td> </tr>
-<tr bgcolor="e56ce6">  <td>25/03/18 11:19:02</td>   <td>9327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.quitandclose()[pri:0, instance:test_script.ManageContacts_test@49e53c76]">&lt;&lt;quitandclose</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test1-1@1646430738</td>   <td></td> </tr>
-<tr bgcolor="e56ce6">  <td>25/03/18 11:19:01</td>   <td>8462</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.quitandclose()[pri:0, instance:test_script.ManageNews_test@1bb5a082]">&lt;&lt;quitandclose</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test1-2@1434836182</td>   <td></td> </tr>
+<tr bgcolor="c88a92">  <td>25/03/18 18:43:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializerbrowser(java.lang.String)[pri:0, instance:test_script.Login_test@18078bef]">&gt;&gt;initializerbrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@558457235</td>   <td></td> </tr>
+<tr bgcolor="c88a92">  <td>25/03/18 18:43:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializerbrowser(java.lang.String)[pri:0, instance:test_script.ManageContacts_test@6989da5e]">&gt;&gt;initializerbrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@487436471</td>   <td></td> </tr>
+<tr bgcolor="689d9d">  <td>25/03/18 18:43:52</td>   <td>5135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageContacts_test.manageContact()[pri:0, instance:test_script.ManageContacts_test@6989da5e]">manageContact</td> 
+  <td>TestNG-tests-2@487436471</td>   <td></td> </tr>
+<tr bgcolor="c88a92">  <td>25/03/18 18:43:53</td>   <td>6688</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.quitandclose()[pri:0, instance:test_script.Login_test@18078bef]">&lt;&lt;quitandclose</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@558457235</td>   <td></td> </tr>
+<tr bgcolor="c88a92">  <td>25/03/18 18:43:55</td>   <td>8326</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.quitandclose()[pri:0, instance:test_script.ManageContacts_test@6989da5e]">&lt;&lt;quitandclose</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@487436471</td>   <td></td> </tr>
+<tr bgcolor="b66d96">  <td>25/03/18 18:43:51</td>   <td>4866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_test.verifyTheUserIsAbleToLoginUsingValidCredentials()[pri:1, instance:test_script.Login_test@18078bef]">verifyTheUserIsAbleToLoginUsingValidCredentials</td> 
+  <td>TestNG-tests-1@558457235</td>   <td></td> </tr>
 </table>
